--- a/css/gridz.css
+++ b/css/gridz.css
@@ -76,14 +76,14 @@
      margin: 0;
  }
 
- @media (max-width: 900px) {
+ @media (max-width: 768px) {
 
      :root {
          --gridz: 80px;
      }
 
      body {
-         width: 100%;
+         width: 90%;
          height: auto;
      }
 
